fix un aligned filter header

--- a/src/design-system/Select/Select.css
+++ b/src/design-system/Select/Select.css
@@ -9,7 +9,6 @@
     justify-content: space-between;
     padding: 0 var(--space-8) 0 var(--space-16);
     font-weight: var(--font-weight-400);
-    margin-top: var(--space-6);
 }
 .btn-secondary.select__header:hover {
     border-color: var(--primary-500);
